@@ -19,15 +19,15 @@ if test "x$PKG_CONFIG" = "xno"; then
 fi
 AC_SUBST(MONO)
 
-PKG_CHECK_MODULES(MONO, mono >= 0.31)
+PKG_CHECK_MODULES(MONO, mono >= 1.0)
 AC_SUBST(MONO_CFLAGS)
 AC_SUBST(MONO_LIBS)
 
-PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.18)
+PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 1.0)
 AC_SUBST(GTK_SHARP_CFLAGS)
 AC_SUBST(GTK_SHARP_LIBS)
 
-PKG_CHECK_MODULES(DIACANVAS2, diacanvas2 >= 0.12.0)
+PKG_CHECK_MODULES(DIACANVAS2, diacanvas2 >= 0.13.0)
 AC_SUBST(DIACANVAS2_CFLAGS)
 AC_SUBST(DIACANVAS2_LIBS)
 
